# ipc_transport_structured

./: .gitignore  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md
src/: CMakeLists.txt
src/ipc/transport/struc/: channel.cpp  channel.hpp  channel_base.hpp  error.cpp  error.hpp  heap_fixed_builder_capnp_msg_builder.cpp  heap_fixed_builder_capnp_msg_builder.hpp  heap_serializer.cpp  heap_serializer.hpp  msg.hpp  serializer.hpp  struc_fwd.hpp  util.hpp
src/ipc/transport/struc/detail/: msg_impl.hpp  msg_mdt_out.hpp
src/ipc/transport/struc/schema/: common.capnp
src/ipc/transport/struc/schema/detail/: structured_msg.capnp
src/ipc/transport/struc/sync_io/: channel.hpp
test/basic/: CMakeLists.txt
test/basic/link_test/: CMakeLists.txt  main.cpp  schema.capnp
